[package]
name = "bevy_mod_debugdump"
version = "0.2.1"
repository = "https://github.com/jakobhellermann/bevy_mod_debugdump"
readme = "README.md"
license = "MIT"
description = "Visualization for bevy"
keywords = ["bevy", "inspector", "visual", "editor", "game"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
exclude = ["docs/*"]

[features]
default = ["render_graph"]
render_graph = ["bevy/bevy_render2"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", default-features = false }
pretty-type-name = "1.0"
itertools = "0.10.0"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", features = ["bevy_pbr2", "bevy_sprite2"] }

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]
